--- a/about.html
+++ b/about.html
@@ -85,7 +85,18 @@
             >
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
+              <li class="dropdown">
+                <a
+                  href="services.html"
+                  class="dropdown-toggle"
+                  data-toggle="dropdown"
+                  >Services</a
+                >
+                <ul class="dropdown-menu">
+                  <li><a href="airbnb.html">Airbnb Cleaning</a></li>
+                </ul>
+              </li>
+              <li><a href="gallery.html">Gallery</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -117,9 +128,7 @@
           >
             <div class="about-two-info">
               <h4 class="sub-title">About Us</h4>
-              <h2 class="title">
-                Elevating Cleanliness, Redefining Hospitality
-              </h2>
+              <h2 class="title">Experience Airbnb Cleaning at its finest</h2>
               <p>
                 At Regal Stay Cleaning, we understand that first impressions
                 matter. Our exceptional first impression cleaning services are
@@ -157,6 +166,58 @@
       </div>
     </div>
     <!-- End About -->
+
+    <div
+      class="choose-us-style-two-area default-padding bg-gradient text-light"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-4">
+            <div class="choose-us-style-two">
+              <h2 class="title mb-50">Setting Standards</h2>
+              <ul class="check-list-item">
+                <li>
+                  <h4>Unparalleled Services</h4>
+                  <p>
+                    Our cleaning operatives operate seven days a week, offering
+                    on-demand property cleaning, be it a one-off, weekly,
+                    fortnightly, or monthly clean.
+                  </p>
+                </li>
+                <li>
+                  <h4>Flexibility</h4>
+                  <p>
+                    We value your flexibility, and with at least 24 hours'
+                    notice, rescheduling is hassle-free.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-xl-7 offset-xl-1 text-end">
+            <div class="choose-us-style-two-thumb">
+              <div class="curve-text">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 150 150"
+                  version="1.1"
+                >
+                  <path id="textPath" d="M 0,75 a 75,75 0 1,1 0,1 z"></path>
+                  <text>
+                    <textPath href="#textPath">
+                      Regal Stay Cleaning Regal Stay Cleaning
+                    </textPath>
+                  </text>
+                </svg>
+              </div>
+              <h4>We have worked for you</h4>
+              <h2 class="text-path">since 2013</h2>
+              <img src="assets/img/banner/4.jpg" alt="Image Not Found" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Start Proces
     ============================================= -->
     <div
@@ -237,6 +298,116 @@
     </div>
     <!-- End Process -->
 
+    <!-- Start Case Studies 
+    ============================================= -->
+    <div
+      class="case-studies-area default-padding"
+      style="background-image: url(assets/img/shape/30.png)"
+    >
+      <div class="container">
+        <div class="case-carousel swiper">
+          <div class="heading-left">
+            <div class="row">
+              <div class="col-xl-5 col-lg-6">
+                <div class="content-left">
+                  <h5 class="sub-title">Why Us?</h5>
+                  <h2 class="heading">Reasons to Choose Us</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Single item -->
+            <div class="swiper-slide">
+              <div class="case-style-two">
+                <div class="row">
+                  <div class="col-xl-6">
+                    <div class="case-thumb">
+                      <img
+                        src="assets/img/gallery/1.jpg"
+                        alt="Image Not Found"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-xl-6">
+                    <div
+                      class="info text-light"
+                      style="
+                        background-image: url(assets/img/shape/banner-3.png);
+                      "
+                    >
+                      <h2>Airbnb Cleanliness</h2>
+                      <p>
+                        Cleanliness significantly influences Airbnb ratings,
+                        with a proven correlation between property cleanliness
+                        and reviews. Airbnb's survey showed 20% more bookings
+                        for listings rated 4.8 or above for cleanliness. Guest
+                        testimonials consistently stress the importance of
+                        cleanliness for comfort and safety.
+                      </p>
+                      <a
+                        class="btn btn-md btn-dark animation"
+                        href="project-details.html"
+                        >View project</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- End Single item -->
+            <!-- Single item -->
+            <div class="swiper-slide">
+              <div class="case-style-two">
+                <div class="row">
+                  <div class="col-xl-6">
+                    <div class="case-thumb">
+                      <img
+                        src="assets/img/gallery/2.jpg"
+                        alt="Image Not Found"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-xl-6">
+                    <div
+                      class="info text-light"
+                      style="
+                        background-image: url(assets/img/shape/banner-3.png);
+                      "
+                    >
+                      <h2>Benefits of working with us</h2>
+                      <p>
+                        Opting for Regal Stay Cleaning Services offers
+                        consistent excellence, time savings, attention to
+                        detail, an enhanced guest experience, and ultimately
+                        drives your Airbnb business towards greater
+                        achievements.
+                      </p>
+                      <a
+                        class="btn btn-md btn-dark animation"
+                        href="project-details.html"
+                        >View project</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- End Single item -->
+          </div>
+
+          <!-- Navigation -->
+          <div class="case-swiper-nav">
+            <!-- Pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Case Studies -->
+
     <div class="our-clients default-padding-top default-padding-bottom">
       <div class="container">
         <div class="row">
@@ -248,29 +419,30 @@
           </div>
         </div>
       </div>
-      <ul>
-        <li>
-          <img src="assets/img/brands/airbnb.png" alt="" />
-          <img src="assets/img/brands/airbnb.png" alt="" />
-        </li>
-        <li>
-          <img src="assets/img/brands/uplisting.png" alt="" />
-          <img src="assets/img/brands/uplisting.png" alt="" />
-        </li>
-        <li>
-          <img src="assets/img/brands/booking.png" alt="" />
-          <img src="assets/img/brands/booking.png" alt="" />
-        </li>
-        <li>
-          <img src="images/4.png" alt="" /> <img src="images/4-4.png" alt="" />
-        </li>
-        <li>
-          <img src="images/5.png" alt="" /> <img src="images/5-5.png" alt="" />
-        </li>
-        <li>
-          <img src="images/6.png" alt="" /> <img src="images/6-6.png" alt="" />
-        </li>
-      </ul>
+      <section class="brand-client section-margin">
+        <div class="container">
+          <div class="wapper-client">
+            <div class="logo-box">
+              <img src="assets/img/brands/airbnb.png" alt="" />
+            </div>
+            <div class="logo-box">
+              <img src="assets/img/brands/booking.png" alt="" />
+            </div>
+            <div class="logo-box">
+              <img src="assets/img/brands/expedia.png" alt="" />
+            </div>
+            <div class="logo-box">
+              <img src="assets/img/brands/hotels.png" alt="" />
+            </div>
+            <div class="logo-box">
+              <img src="assets/img/brands/trip.png" alt="" />
+            </div>
+            <div class="logo-box">
+              <img src="assets/img/brands/uplisting.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <!-- Start Footer 
@@ -286,17 +458,34 @@
             <div class="col-lg-4 col-md-6 footer-item mt-50">
               <div class="f-item about pr-50 pr-xs-0 pr-md-0">
                 <img class="logo" src="assets/img/logo.png" alt="Logo" />
-                <p>We aim to always give you the best here at Regal Stay.</p>
+                <p>We aim to give you the best here at Regal Stay.</p>
                 <div class="footer-social mt-30">
                   <ul>
                     <li>
-                      <a href="#"><i class="fa fa-facebook"></i></a>
+                      <a
+                        href="https://www.facebook.com/profile.php?id=100089841392314"
+                        target="_blank"
+                        ><i class="fa fa-facebook"></i
+                      ></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-twitter"></i></a>
+                      <a href="https://twitter.com/regal_stay" target="_blank"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-linkedin"></i></a>
+                      <a
+                        href="https://www.instagram.com/regalstay"
+                        target="_blank"
+                        ><i class="fa-brands fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.linkedin.com/in/regal-stay"
+                        target="_blank"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
                     </li>
                   </ul>
                 </div>
@@ -354,8 +543,11 @@
                   <li>
                     <div class="content">
                       <strong>Email:</strong>
-                      <a href="mailto:info@regalstaycleaning.co.uk"
-                        >info@regalstaycleaning.co.uk</a
+                      <a href="mailto:cleaning@regalstay.co.uk"
+                        >cleaning@regalstay.co.uk</a
+                      ><br />
+                      <a href="mailto:office@regalstay.co.uk"
+                        >office@regalstay.co.uk</a
                       >
                     </div>
                   </li>
