--- a/gallery.html
+++ b/gallery.html
@@ -110,240 +110,116 @@
     </header>
     <!-- End Header -->
 
-    <!-- Start About 
+    <!-- Start Gallery 
     ============================================= -->
-    <div class="about-style-two-area default-padding">
+    <div class="project-style-two-area default-padding">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 about-style-two">
-            <div class="about-two-thumb">
-              <img src="assets/img/thumb/5.jpg" alt="Image Not Found" />
-            </div>
-          </div>
-          <div
-            class="col-lg-6 about-style-two pl-50 pl-md-15 pl-xs-15 mt-60 mt-xs-40"
-          >
-            <div class="about-two-info">
-              <h4 class="sub-title">Services</h4>
-              <h2 class="title">Airbnb Cleanliness, Redefining Hospitality</h2>
-              <p>
-                At Regal Stay Cleaning, we specialize in providing top-tier
-                cleaning services that guarantee an exceptional guest
-                experience. Our meticulous attention to detail and commitment to
-                excellence set us apart as a trusted partner in maintaining the
-                highest standards of cleanliness in the hospitality industry.
-              </p>
-              <div class="about-grid-info">
-                <!-- <a class="btn-round-animation" href="services.html"
-                  >Discover More <i class="fa-solid fa-arrow-right"></i
-                ></a> -->
-                <ul class="list-info-item">
-                  <li>
-                    <h4>
-                      <a href="javascript:void(0)"
-                        >Customized Cleaning Solutions
-                      </a>
-                    </h4>
-                  </li>
-                  <li>
-                    <h4>
-                      <a href="javascript:void(0)"
-                        >Comprehensive Cleaning Services</a
-                      >
-                    </h4>
-                  </li>
-                  <li>
-                    <h4>
-                      <a href="javascript:void(0)">Meeting Hotel Standards</a>
-                    </h4>
-                  </li>
-                </ul>
-              </div>
+          <div class="col-lg-8 offset-lg-2">
+            <div class="site-heading text-center">
+              <!-- <h5 class="sub-title">Our Works</h5> -->
+              <h2 class="title">Gallery of our works</h2>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <!-- End About -->
-
-    <!-- Start Services 
-    ============================================= -->
-    <div
-      class="services-style-two-area service-two-grid default-padding-top default-padding-bottom bottom-less"
-    >
       <div class="container">
         <div class="row">
-          <!-- Start Single Item -->
-          <div class="col-xl-4 col-lg-6 col-md-6 mb-30">
-            <div class="service-style-two">
-              <div class="icon">
-                <img src="assets/img/icon/standard.png" alt="Image Not Found" />
-              </div>
-              <p>
-                Elevate your space with our Standard Cleaning Service, designed
-                to maintain a consistent level of cleanliness. Choose this
-                service for regular upkeep that leaves your space inviting and
-                comfortable.
-              </p>
-              <h4><a href="contact.html">Regular Cleaning</a></h4>
-              <!-- <span>Media</span> -->
-              <a href="contact.html" class="icon-btn"
-                ><i class="fa-solid fa-arrow-right"></i
-              ></a>
-            </div>
-          </div>
-          <!-- End Single Item -->
-          <!-- Start Single Item -->
-          <div class="col-xl-4 col-lg-6 col-md-6 mb-30">
-            <div class="service-style-two">
-              <div class="icon">
-                <img src="assets/img/icon/airbnb.png" alt="Image Not Found" />
-              </div>
-              <p>
-                Elevate your Airbnb hosting game by entrusting us with your
-                cleaning needs. Our meticulous service ensures each guest steps
-                into a spotless haven. Let us handle the cleaning so you can
-                focus on creating unforgettable guest experiences.
-              </p>
-              <h4><a href="airbnb.html">Airbnb Cleaning</a></h4>
-              <!-- <span>Media</span> -->
-              <a href="airbnb.html" class="icon-btn"
-                ><i class="fa-solid fa-arrow-right"></i
-              ></a>
-            </div>
-          </div>
-          <!-- End Single Item -->
-          <!-- Start Single Item -->
-          <div class="col-xl-4 col-lg-6 col-md-6 mb-30">
-            <div class="service-style-two">
-              <div class="icon">
-                <img src="assets/img/icon/deep.png" alt="Image Not Found" />
-              </div>
-              <p>
-                Experience the ultimate in cleanliness with our Deep Cleaning
-                Service. We ensure a thorough restoration of hygiene and
-                freshness that standard cleaning just can't match.
-              </p>
-              <h4><a href="contact.html">Deep Cleaning</a></h4>
-              <!-- <span>Marketing</span> -->
-              <a href="contact.html" class="icon-btn"
-                ><i class="fa-solid fa-arrow-right"></i
-              ></a>
-            </div>
-          </div>
-          <!-- End Single Item -->
-        </div>
-      </div>
-    </div>
-    <!-- End Services -->
-    <!-- Start Testimonial Area 
-    ============================================= -->
-    <div
-      class="testimonial-style-two-area overflow-hidden bg-gradient text-light"
-      style="padding-bottom: 20px; padding-top: 20px"
-    >
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-8 offset-xl-2">
-            <div class="testimonial-style-two-box default-padding">
-              <div class="star-shape">
-                <img src="assets/img/shape/21.png" alt="Image Not Found" />
-              </div>
-              <img src="assets/img/shape/quote-big.png" alt="Image Not Found" />
-              <div class="site-heaidng">
-                <h2 class="title">What people say</h2>
-              </div>
-              <div class="testimonial-style-two-carousel swiper">
-                <!-- Additional required wrapper -->
-                <div class="swiper-wrapper">
-                  <!-- Single item -->
-                  <div class="swiper-slide">
-                    <div class="testimonial-style-two">
-                      <div class="item">
-                        <div class="content">
-                          <p>
-                            I was amazed by the transformation after booking the
-                            Deep Cleaning Service from this company. They truly
-                            went above and beyond, tackling every nook and
-                            cranny. My home feels fresh, and the attention to
-                            detail is unmatched. I can't recommend them enough
-                            for their thoroughness and dedication to creating a
-                            spotless environment.
-                          </p>
-                        </div>
-                        <div class="provider">
-                          <div class="info">
-                            <h4>Sarah M.</h4>
-                            <!-- <span>Senior Consultant</span> -->
-                          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12 gallery-content">
+                <div class="magnific-mix-gallery masonary">
+                  <div id="gallery-masonary" class="gallery-items colums-2">
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/1.jpeg" alt="thumb" />
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <!-- End Single item -->
-                  <!-- Single item -->
-                  <div class="swiper-slide">
-                    <div class="testimonial-style-two">
-                      <div class="item">
-                        <div class="content">
-                          <p>
-                            Consistency is key for me, and that's exactly what I
-                            found with the Standard Cleaning Service provided by
-                            this company. The team is reliable, efficient, and
-                            my home looks consistently inviting after each
-                            visit. Their attention to the finer details is
-                            impressive, making them my go-to choice for
-                            maintaining a clean and comfortable living space.
-                          </p>
-                        </div>
-                        <div class="provider">
-                          <div class="info">
-                            <h4>David T.</h4>
-                            <!-- <span>Marketing Manager</span> -->
-                          </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/2.jpeg" alt="thumb" />
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <!-- End Single item -->
-                  <!-- Single item -->
-                  <div class="swiper-slide">
-                    <div class="testimonial-style-two">
-                      <div class="item">
-                        <div class="content">
-                          <p>
-                            Moving can be incredibly stressful, but the Move
-                            In/Out Cleaning Service I received here made a world
-                            of difference. They left my old place looking better
-                            than when I moved in, and my new home felt like a
-                            fresh start. The team's dedication to thoroughness
-                            and professionalism turned what could have been a
-                            chaotic experience into a smooth transition. Highly
-                            grateful!
-                          </p>
-                        </div>
-                        <div class="provider">
-                          <div class="info">
-                            <h4>Lisa P.</h4>
-                            <!-- <span>Senior Developer</span> -->
-                          </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/3.jpg" alt="thumb" />
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <!-- End Single item -->
-                </div>
-
-                <!-- Navigation -->
-                <div class="testimonial-two-swiper-nav">
-                  <!-- Pagination -->
-                  <div class="testimonial-two-pagination"></div>
-
-                  <div class="testimonial-two-button-prev">
-                    <i class="fa-solid fa-chevron-left"></i>
-                  </div>
-                  <div class="testimonial-two-button-next">
-                    <i class="fa-solid fa-chevron-right"></i>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/4.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/5.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/6.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/7.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/8.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/9.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
+                    <!-- Single Item -->
+                    <div class="gallery-item">
+                      <div class="gallery-style-two">
+                        <div class="thumb">
+                          <img src="assets/img/portfolio/10.jpg" alt="thumb" />
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Single Item -->
                   </div>
                 </div>
               </div>
@@ -352,7 +228,8 @@
         </div>
       </div>
     </div>
-    <!-- End Testimonial Area -->
+    <!-- End Gallery -->
+
     <!-- Start Footer 
     ============================================= -->
     <footer
@@ -364,6 +241,7 @@
           <div class="row">
             <!-- Singel Item -->
             <div class="col-lg-4 col-md-6 footer-item mt-50">
+              <!--  -->
               <div class="f-item about pr-50 pr-xs-0 pr-md-0">
                 <img class="logo" src="assets/img/logo.png" alt="Logo" />
                 <p>We aim to give you the best here at Regal Stay.</p>
