--- a/index.html
+++ b/index.html
@@ -85,7 +85,19 @@
             >
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
+              <li class="dropdown">
+                <a
+                  href="services.html"
+                  class="dropdown-toggle"
+                  data-toggle="dropdown"
+                  >Services</a
+                >
+                <ul class="dropdown-menu">
+                  <li><a href="airbnb.html">Airbnb Cleaning</a></li>
+                </ul>
+              </li>
+
+              <li><a href="gallery.html">Gallery</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -103,11 +115,11 @@
     ============================================= -->
     <div
       class="banner-style-one-area"
-      style="background-image: url(assets/img/shape/15.png)"
+      style="background-image: url(assets/img/shape/15.svg)"
     >
-      <div class="shape-left-top">
-        <img src="assets/img/shape/2.png" alt="Shape" />
-      </div>
+      <!-- <div class="shape-left-top">
+        <img src="assets/img/shape/wave.png" alt="Shape" />
+      </div> -->
       <!-- Single Item -->
       <div class="banner-style-one">
         <div class="container">
@@ -326,7 +338,7 @@
                     <div class="gallery-item">
                       <div class="gallery-style-two">
                         <div class="thumb">
-                          <img src="assets/img/portfolio/7.jpg" alt="thumb" />
+                          <img src="assets/img/portfolio/1.jpeg" alt="thumb" />
                         </div>
                       </div>
                     </div>
@@ -335,7 +347,7 @@
                     <div class="gallery-item">
                       <div class="gallery-style-two">
                         <div class="thumb">
-                          <img src="assets/img/portfolio/13.jpg" alt="thumb" />
+                          <img src="assets/img/portfolio/2.jpeg" alt="thumb" />
                         </div>
                       </div>
                     </div>
@@ -344,7 +356,7 @@
                     <div class="gallery-item">
                       <div class="gallery-style-two">
                         <div class="thumb">
-                          <img src="assets/img/portfolio/9.jpg" alt="thumb" />
+                          <img src="assets/img/portfolio/3.jpg" alt="thumb" />
                         </div>
                       </div>
                     </div>
@@ -353,7 +365,7 @@
                     <div class="gallery-item">
                       <div class="gallery-style-two">
                         <div class="thumb">
-                          <img src="assets/img/portfolio/10.jpg" alt="thumb" />
+                          <img src="assets/img/portfolio/4.jpg" alt="thumb" />
                         </div>
                       </div>
                     </div>
@@ -362,7 +374,7 @@
                     <div class="gallery-item">
                       <div class="gallery-style-two">
                         <div class="thumb">
-                          <img src="assets/img/portfolio/11.jpg" alt="thumb" />
+                          <img src="assets/img/portfolio/5.jpg" alt="thumb" />
                         </div>
                       </div>
                     </div>
@@ -371,13 +383,16 @@
                     <div class="gallery-item">
                       <div class="gallery-style-two">
                         <div class="thumb">
-                          <img src="assets/img/portfolio/12.jpg" alt="thumb" />
+                          <img src="assets/img/portfolio/6.jpg" alt="thumb" />
                         </div>
                       </div>
                     </div>
                     <!-- End Single Item -->
                   </div>
                 </div>
+                <a class="btn btn-md btn-gradient animation" href="gallery.html"
+                  >View All</a
+                >
               </div>
             </div>
           </div>
@@ -476,45 +491,30 @@
           </div>
         </div>
       </div>
-      <div class="logos">
-        <div class="logos-slide">
-          <img src="assets/img/brands/airbnb.png" alt="" />
-          <img src="assets/img/brands/booking.png" alt="" />
-          <img src="assets/img/brands/expedia.png" alt="" />
-          <img src="assets/img/brands/hotels.png" alt="" />
-          <img src="assets/img/brands/prs.png" alt="" />
-          <img src="assets/img/brands/trip.png" alt="" />
+      <section class="brand-client section-margin">
+        <div class="container">
+          <div class="wapper-client">
+            <div class="logo-box">
+              <img src="assets/img/brands/airbnb.png" alt="" />
+            </div>
+            <div class="logo-box">
+              <img src="assets/img/brands/booking.png" alt="" />
+            </div>
+            <div class="logo-box">
+              <img src="assets/img/brands/expedia.png" alt="" />
+            </div>
+            <div class="logo-box">
+              <img src="assets/img/brands/hotels.png" alt="" />
+            </div>
+            <div class="logo-box">
+              <img src="assets/img/brands/trip.png" alt="" />
+            </div>
+            <div class="logo-box">
+              <img src="assets/img/brands/uplisting.png" alt="" />
+            </div>
+          </div>
         </div>
-
-        <div class="logos-slide">
-          <img src="assets/img/brands/airbnb.png" alt="" />
-          <img src="assets/img/brands/booking.png" alt="" />
-          <img src="assets/img/brands/expedia.png" alt="" />
-          <img src="assets/img/brands/hotels.png" alt="" />
-          <img src="assets/img/brands/prs.png" alt="" />
-          <img src="assets/img/brands/trip.png" alt="" />
-        </div>
-      </div>
-    </div>
-
-    <div class="logos">
-      <div class="logos-slide">
-        <img src="assets/img/brands/airbnb.svg" alt="" />
-        <img src="assets/img/brands/booking.png" alt="" />
-        <img src="assets/img/brands/expedia.png" alt="" />
-        <img src="assets/img/brands/hotels.png" alt="" />
-        <img src="assets/img/brands/prs.png" alt="" />
-        <img src="assets/img/brands/trip.png" alt="" />
-      </div>
-
-      <div class="logos-slide">
-        <img src="assets/img/brands/airbnb.svg" alt="" />
-        <img src="assets/img/brands/booking.png" alt="" />
-        <img src="assets/img/brands/expedia.png" alt="" />
-        <img src="assets/img/brands/hotels.png" alt="" />
-        <img src="assets/img/brands/prs.png" alt="" />
-        <img src="assets/img/brands/trip.png" alt="" />
-      </div>
+      </section>
     </div>
 
     <!-- Start Testimonial Area 
@@ -543,19 +543,19 @@
                       <div class="item">
                         <div class="content">
                           <p>
-                            Targeting consultation discover apartments.
-                            ndulgence off under folly death wrote cause her way
-                            spite. Plan upon yet way get cold spot its week.
-                            Almost do am or limits hearts. Resolve parties but
-                            why she shewing. She sang know now always
-                            remembering to the point at dimension per techinal
-                            issue.
+                            I was amazed by the transformation after booking the
+                            Deep Cleaning Service from this company. They truly
+                            went above and beyond, tackling every nook and
+                            cranny. My home feels fresh, and the attention to
+                            detail is unmatched. I can't recommend them enough
+                            for their thoroughness and dedication to creating a
+                            spotless environment.
                           </p>
                         </div>
                         <div class="provider">
                           <div class="info">
-                            <h4>Matthew J. Wyman</h4>
-                            <span>Senior Consultant</span>
+                            <h4>Sarah M.</h4>
+                            <!-- <span>Senior Consultant</span> -->
                           </div>
                         </div>
                       </div>
@@ -568,19 +568,19 @@
                       <div class="item">
                         <div class="content">
                           <p>
-                            Mentioning consultation discover apartments.
-                            ndulgence off under folly death wrote cause her way
-                            spite. Plan upon yet way get cold spot its week.
-                            Almost do am or limits hearts. Resolve parties but
-                            why she shewing. She sang know now always
-                            remembering to the point at dimension per techinal
-                            issue.
+                            Consistency is key for me, and that's exactly what I
+                            found with the Standard Cleaning Service provided by
+                            this company. The team is reliable, efficient, and
+                            my home looks consistently inviting after each
+                            visit. Their attention to the finer details is
+                            impressive, making them my go-to choice for
+                            maintaining a clean and comfortable living space.
                           </p>
                         </div>
                         <div class="provider">
                           <div class="info">
-                            <h4>Anthom Bu Spar</h4>
-                            <span>Marketing Manager</span>
+                            <h4>David T.</h4>
+                            <!-- <span>Marketing Manager</span> -->
                           </div>
                         </div>
                       </div>
@@ -593,18 +593,20 @@
                       <div class="item">
                         <div class="content">
                           <p>
-                            Business consultation discover apartments. ndulgence
-                            off under folly death wrote cause her way spite.
-                            Plan upon yet way get cold spot its week. Almost do
-                            am or limits hearts. Resolve parties but why she
-                            shewing. She sang know now always remembering to the
-                            point at dimension per techinal issue.
+                            Moving can be incredibly stressful, but the Move
+                            In/Out Cleaning Service I received here made a world
+                            of difference. They left my old place looking better
+                            than when I moved in, and my new home felt like a
+                            fresh start. The team's dedication to thoroughness
+                            and professionalism turned what could have been a
+                            chaotic experience into a smooth transition. Highly
+                            grateful!
                           </p>
                         </div>
                         <div class="provider">
                           <div class="info">
-                            <h4>Metho k. Partho</h4>
-                            <span>Senior Developer</span>
+                            <h4>Lisa P.</h4>
+                            <!-- <span>Senior Developer</span> -->
                           </div>
                         </div>
                       </div>
@@ -646,17 +648,34 @@
               <!--  -->
               <div class="f-item about pr-50 pr-xs-0 pr-md-0">
                 <img class="logo" src="assets/img/logo.png" alt="Logo" />
-                <p>We aim to always give you the best here at Regal Stay.</p>
+                <p>We aim to give you the best here at Regal Stay.</p>
                 <div class="footer-social mt-30">
                   <ul>
                     <li>
-                      <a href="#"><i class="fa fa-facebook"></i></a>
+                      <a
+                        href="https://www.facebook.com/profile.php?id=100089841392314"
+                        target="_blank"
+                        ><i class="fa fa-facebook"></i
+                      ></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-twitter"></i></a>
+                      <a href="https://twitter.com/regal_stay" target="_blank"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-linkedin"></i></a>
+                      <a
+                        href="https://www.instagram.com/regalstay"
+                        target="_blank"
+                        ><i class="fa-brands fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.linkedin.com/in/regal-stay"
+                        target="_blank"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
                     </li>
                   </ul>
                 </div>
@@ -714,8 +733,11 @@
                   <li>
                     <div class="content">
                       <strong>Email:</strong>
-                      <a href="mailto:info@regalstaycleaning.co.uk"
-                        >info@regalstaycleaning.co.uk</a
+                      <a href="mailto:cleaning@regalstay.co.uk"
+                        >cleaning@regalstay.co.uk</a
+                      ><br />
+                      <a href="mailto:office@regalstay.co.uk"
+                        >office@regalstay.co.uk</a
                       >
                     </div>
                   </li>
