--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,18 @@
             >
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
+              <li class="dropdown">
+                <a
+                  href="services.html"
+                  class="dropdown-toggle"
+                  data-toggle="dropdown"
+                  >Services</a
+                >
+                <ul class="dropdown-menu">
+                  <li><a href="airbnb.html">Airbnb Cleaning</a></li>
+                </ul>
+              </li>
+              <li><a href="gallery.html">Gallery</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -247,8 +258,8 @@
                 <li class="wow fadeInUp" data-wow-delay="500ms">
                   <div class="info">
                     <h4 class="title">Email</h4>
-                    <a href="mailto:info@regalstaycleaning.co.uk"
-                      >info@regalstaycleaning.co.uk</a
+                    <a href="mailto:cleaning@regalstay.co.uk"
+                      >cleaning@regalstay.co.uk</a
                     >
                   </div>
                 </li>
@@ -295,17 +306,34 @@
             <div class="col-lg-4 col-md-6 footer-item mt-50">
               <div class="f-item about pr-50 pr-xs-0 pr-md-0">
                 <img class="logo" src="assets/img/logo.png" alt="Logo" />
-                <p>We aim to always give you the best here at Regal Stay.</p>
+                <p>We aim to give you the best here at Regal Stay.</p>
                 <div class="footer-social mt-30">
                   <ul>
                     <li>
-                      <a href="#"><i class="fa fa-facebook"></i></a>
+                      <a
+                        href="https://www.facebook.com/profile.php?id=100089841392314"
+                        target="_blank"
+                        ><i class="fa fa-facebook"></i
+                      ></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-twitter"></i></a>
+                      <a href="https://twitter.com/regal_stay" target="_blank"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa fa-linkedin"></i></a>
+                      <a
+                        href="https://www.instagram.com/regalstay"
+                        target="_blank"
+                        ><i class="fa-brands fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.linkedin.com/in/regal-stay"
+                        target="_blank"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
                     </li>
                   </ul>
                 </div>
@@ -363,8 +391,11 @@
                   <li>
                     <div class="content">
                       <strong>Email:</strong>
-                      <a href="mailto:info@regalstaycleaning.co.uk"
-                        >info@regalstaycleaning.co.uk</a
+                      <a href="mailto:cleaning@regalstay.co.uk"
+                        >cleaning@regalstay.co.uk</a
+                      ><br />
+                      <a href="mailto:office@regalstay.co.uk"
+                        >office@regalstay.co.uk</a
                       >
                     </div>
                   </li>
